# mmkcmd

./: CMakeLists.txt  LICENSE  README.md
man/: mmkcmd.1
src/: MKCKeyListener.h  MKCKeyListener.m  main.m
